fix: scripts and styles of category filter on mobile

--- a/styles/goods.css
+++ b/styles/goods.css
@@ -531,6 +531,12 @@ input::-webkit-inner-spin-button {
   display: none;
 }
 
+.filter-modal .button-standart {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 10px;
+}
+
 .goods__filterModal {
   max-width: calc(100% - 30px);
   margin: 25px auto 0 auto;
